feat: Mise à jour des routes, de la page d'accueil et des fonctionnalités de véhicules
- Ajout d'une nouvelle route pour les détails de véhicules dans .htaccess
- Mise à jour de l'index.php avec une description et des liens de page d'accueil actualisés
- Ajout de fonctions de gestion de véhicules et de panier dans config/config.php
- Modification du style CSS pour améliorer la cohérence et l'expérience utilisateur
- Mise à jour des pages about, catalogue et contact avec des informations localisées

--- a/.htaccess
+++ b/.htaccess
@@ -20,6 +20,9 @@ RewriteRule ^(assets|images|js|css)/(.*)$ public/$1/$2 [L]
 # Redirection des pages d'authentification
 RewriteRule ^auth/([^/]+)$ public/pages/auth/$1.php [L,QSA]
 
+# Redirection des pages de détail des véhicules
+RewriteRule ^vehicule/detail$ public/pages/vehicule/detail.php [L,QSA]
+
 # Redirection des autres pages
 RewriteRule ^([^/]+)/?$ public/pages/$1/index.php [L,QSA]
 
