refactor(htaccess): Mise à jour des chemins de redirection et de gestion des erreurs
- Modification du chemin de redirection vers index.php
- Mise à jour des chemins des pages d'erreur personnalisées
- Suppression du répertoire 'public' dans les chemins de redirection

--- a/.htaccess
+++ b/.htaccess
@@ -18,12 +18,12 @@ AddType application/x-httpd-php .php
 RewriteCond %{HTTP:X-Forwarded-Proto} !https
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Redirection vers public/index.php
+# Redirection vers index.php
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ public/index.php [QSA,L]
+RewriteRule ^(.*)$ index.php [QSA,L]
 
 # Pages d'erreur personnalisées
-ErrorDocument 404 /public/pages/errors/404.php
-ErrorDocument 403 /public/pages/errors/403.php
-ErrorDocument 500 /public/pages/errors/500.php 
+ErrorDocument 404 /pages/errors/404.php
+ErrorDocument 403 /pages/errors/403.php
+ErrorDocument 500 /pages/errors/500.php 
