--- a/railway.toml
+++ b/railway.toml
@@ -3,14 +3,15 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "apache2-foreground"
+startCommand = "/start.sh"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
 [env]
-SITE_URL = "https://dacar.up.railway.app"
-DB_HOST = "${{ Railway.MYSQL_HOST }}"
-DB_PORT = "${{ Railway.MYSQL_PORT }}"
-DB_DATABASE = "${{ Railway.MYSQL_DATABASE }}"
-DB_USERNAME = "${{ Railway.MYSQL_USERNAME }}"
-DB_PASSWORD = "${{ Railway.MYSQL_PASSWORD }}" 
+RAILWAY_ENVIRONMENT = "production"
+RAILWAY_PUBLIC_DOMAIN = "https://dacar.up.railway.app"
+MYSQLHOST = "${{ Railway.MYSQL_HOST }}"
+MYSQLPORT = "${{ Railway.MYSQL_PORT }}"
+MYSQLDATABASE = "terancar"
+MYSQLUSER = "${{ Railway.MYSQL_USERNAME }}"
+MYSQLPASSWORD = "${{ Railway.MYSQL_PASSWORD }}" 
