--- a/.htaccess
+++ b/.htaccess
@@ -1,46 +1,67 @@
-# Activation du module de réécriture
+# Activation du moteur de réécriture
 RewriteEngine On
+
+# Base du répertoire
 RewriteBase /DaCar/
 
-# Configuration de base
-Options +FollowSymLinks
-AddDefaultCharset UTF-8
-
-# Activation de PHP
-AddType application/x-httpd-php .php
+# Permettre l'accès direct aux fichiers existants
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
 
 # Protection des fichiers sensibles
+RewriteRule ^includes/ - [F,L]
+RewriteRule ^config/ - [F,L]
+RewriteRule ^vendor/ - [F,L]
+
+# Permettre l'accès aux assets
+RewriteCond %{REQUEST_URI} \.(css|js|jpg|jpeg|png|gif|ico|webp|avif)$ [NC]
+RewriteRule ^ - [L]
+
+# Redirection vers public/index.php
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ public/index.php [QSA,L]
+
+# Protection contre l'accès aux fichiers .htaccess et .env
 <FilesMatch "^\.">
     Order allow,deny
     Deny from all
 </FilesMatch>
 
-# Redirection vers HTTPS SAUF EN LOCAL (localhost)
-RewriteCond %{HTTP_HOST} !^localhost [NC]
-RewriteCond %{HTTPS} !=on
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# Compression GZIP
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
 
-# Permettre l'accès direct aux assets (CSS, JS, images)
-RewriteCond %{REQUEST_URI} ^/DaCar/public/assets/ [OR]
-RewriteCond %{REQUEST_URI} ^/DaCar/public/images/ [OR]
-RewriteCond %{REQUEST_URI} ^/DaCar/public/js/ [OR]
-RewriteCond %{REQUEST_URI} ^/DaCar/public/css/
-RewriteRule ^ - [L]
+# Cache Control
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+</IfModule>
 
-# Règles spécifiques pour le panier
-RewriteRule ^panier/?$ public/pages/panier/index.php [L]
-RewriteRule ^pages/panier/?$ public/pages/panier/index.php [L]
-
-# Redirection vers `public/index.php` pour toutes les autres requêtes
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ public/index.php [QSA,L]
-
-# Headers pour les fichiers statiques (optimisation performance)
-<FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf|eot|mp4|webm|ogg|mp3|wav)$">
-    Header set Cache-Control "public, max-age=31536000"
-</FilesMatch>
+# Headers de sécurité
+<IfModule mod_headers.c>
+    Header set X-Content-Type-Options "nosniff"
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+</IfModule>
 
 # Pages d'erreur personnalisées
 ErrorDocument 404 /DaCar/public/pages/errors/404.php
