chore(dépendances, configuration): Mettre à jour la version de PHP à 8.1, ajouter des extensions requises dans composer.json, et modifier .gitignore pour inclure .env.example et public/uploads/.gitkeep.

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,6 @@ php_errors.log
 # Documentation générée
 /docs/generated/
 # => Peut être régénérée à partir du code source
+
+!.env.example
+!public/uploads/.gitkeep
